--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Upload and Download</title>
+    <title>Compact</title>
+    <link rel="stylesheet" href="../static/index.css">
+    <link rel="icon" href="../static/images/default-removebg-preview.png">
 </head>
 <body>
-    <h1>Welcome to the File Upload and Download App</h1>
-    <ul>
-        <li><a href="{{ url_for('upload') }}">Upload a File</a></li>
-        <li><a href="{{ url_for('download') }}">Download a File</a></li>
-    </ul>
+    <header class="navbar">
+        <div class="logo">
+            <img class="compact_logo" src="../static/images/cover-removebg-preview.png" alt="Compact Logo">
+        </div>
+    </header>
+    <main class="content">
+        <div class="container">
+            <h1>Welcome to Compact</h1>
+            <div class="button-container">
+                <a class="button" href="{{ url_for('upload') }}">Upload a File</a>
+                <a class="button" href="{{ url_for('download') }}">Download a File</a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
