--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload File</title>
+    <title>Compact</title>
     <link rel="stylesheet" href="../static/uploads.css">
     <link rel="icon" href="../static/images/default-removebg-preview.png">
 </head>
