--- a/static/display_key.css
+++ b/static/display_key.css
@@ -9,7 +9,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;  /* Prevent scrolling */
+    /* overflow: hidden;  Prevent scrolling */
 }
 
 body {
