even backend fixed this time

--- a/templates/display_key.html
+++ b/templates/display_key.html
@@ -20,6 +20,7 @@
             <p class="key">{{ key }}</p>
             <div class="nav-buttons">
                 <a href="/">Go Home</a>
+                <a href="/download">download file</a>
             </div>
         </div>
     </div>
