--- a/templates/doctor_signup.html
+++ b/templates/doctor_signup.html
@@ -11,6 +11,10 @@
         <label for="name">Doctor's Name:</label>
         <input type="text" id="name" name="name" required>
         <br><br>
+        
+        <label for="password">Password:</label>
+        <input type="text" id="password" name="password" required>
+        <br><br>
 
         <label for="speciality">Speciality:</label>
         <input type="text" id="speciality" name="speciality" required>
