--- a/templates/patient_signup.html
+++ b/templates/patient_signup.html
@@ -12,7 +12,11 @@
         <input type="text" id="name" name="name" required>
         <br><br>
 
-        <label for="doctors">Assigned Doctors (comma-separated):</label>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <br><br>
+        
+        <label for="doctors">Doctors (comma-separated):</label>
         <input type="text" id="doctors" name="doctors">
         <br><br>
 
