--- a/templates/doctor_login.html
+++ b/templates/doctor_login.html
@@ -3,20 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor Login</title>
+    <title>Compact</title>
+    <link rel="stylesheet" href="../static/doctor_login.css">
+    <link rel="icon" href="../static/images/default-removebg-preview.png">
 </head>
 <body>
-    <h1>Doctor Login</h1>
-    <form action="/doctor/login" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-        <br><br>
-        
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br><br>
-        
-        <button type="submit">Login</button>
-    </form>
+    <header class="navbar">
+        <div class="logo">
+            <img class="compact_logo" src="../static/images/cover-removebg-preview.png" alt="Compact Logo">
+        </div>
+    </header>
+    <main class="content">
+        <div class="container">
+            <h1>Doctor Login</h1>
+            <form action="/doctor/login" method="POST">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <br><br>
+                
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+                <br><br>
+                
+                <button type="submit">Login</button>
+            </form>
+            <p style="margin-top: 1rem;">
+                Don't have an account? 
+                <a href="/doctor_signup" class="signup-link">Sign Up</a>
+            </p>
+        </div>
+    </main>
 </body>
 </html>
