--- a/templates/patient_login.html
+++ b/templates/patient_login.html
@@ -3,35 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compact</title>
-    <link rel="stylesheet" href="../static/patient_login.css">
-    <link rel="icon" href="../static/images/default-removebg-preview.png">
+    <title>Patient Login</title>
 </head>
 <body>
-    <header class="navbar">
-        <div class="logo">
-            <img class="compact_logo" src="../static/images/cover-removebg-preview.png" alt="Compact Logo">
-        </div>
-    </header>
-    <main class="content">
-        <div class="container">
-            <h1>Patient Login</h1>
-            <form action="/patient/login" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <br><br>
-                
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-                <br><br>
-                
-                <button type="submit">Login</button>
-            </form>
-            <p style="margin-top: 1rem;">
-                Don't have an account? 
-                <a href="/patient_signup" class="signup-link">Sign Up</a>
-            </p>
-        </div>
-    </main>
+    <h1>Patient Login</h1>
+    <form action="/patient/login" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <br><br>
+        
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <br><br>
+        
+        <button type="submit">Login</button>
+    </form>
 </body>
 </html>
