--- a/templates/upload_file.html
+++ b/templates/upload_file.html
@@ -3,31 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compact</title>
-    <link rel="stylesheet" href="../static/upload_file.css">
-    <link rel="icon" href="../static/images/default-removebg-preview.png">
+    <title>Upload File to Azure Blob Storage</title>
 </head>
 <body>
-    <header class="navbar">
-        <div class="logo">
-            <img class="compact_logo" src="../static/images/cover-removebg-preview.png" alt="Compact Logo">
-        </div>
-    </header>
-    <main class="content">
-        <div class="container">
-            <h1>Azure Blob Storage - Upload File</h1>
 
-            <h2>Write a File</h2>
-            <form id="writeForm" action="/upload_file" method="POST">
-                <label for="writeFileName">File Name:</label>
-                <input type="text" id="writeFileName" name="file_name" required><br><br>
+    <h1>Azure Blob Storage - Upload File</h1>
 
-                <label for="writeFileContent">File Content:</label>
-                <textarea id="writeFileContent" name="file_content" rows="4" required></textarea><br><br>
+    <h2>Write a File</h2>
+    <form id="writeForm" action="/upload_file" method="POST">
+        <label for="writeFileName">File Name:</label>
+        <input type="text" id="writeFileName" name="file_name" required><br><br>
 
-                <button type="submit">Upload File</button>
-            </form>
-        </div>
-    </main>
+        <label for="writeFileContent">File Content:</label>
+        <textarea id="writeFileContent" name="file_content" rows="4" required></textarea><br><br>
+
+        <button type="submit">Upload File</button>
+    </form>
+
 </body>
 </html>
