--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
         <h1>Advanced Healthcare Solutions</h1>
         <p>Providing cutting-edge medical services with a human touch</p>
         <div class="button-group">
-            <button class="cta" onclick="document.location.href='/login/patient'">Login as Patient</button>
-            <button class="cta" onclick="document.location.href='/login/doctor'">Login as Doctor</button>
+            <button class="cta" onclick="document.location.href='/patient/login'">Login as Patient</button>
+            <button class="cta" onclick="document.location.href='/doctor/login'">Login as Doctor</button>
         </div>
     </section>
 
