--- a/templates/upload_data.html
+++ b/templates/upload_data.html
@@ -4,20 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Text File</title>
+    <link rel="stylesheet" href="../static/upload_data.css">
+    <link rel="icon" href="../static/images/default-removebg-preview.png">
 </head>
 <body>
-    <h1>Upload a Text File for Processing</h1>
-    <form action="/upload_data" method="post" enctype="multipart/form-data">
-        <label for="file">Select a text file:</label>
-        <input type="file" id="file" name="file" accept=".txt" required>
-        <br><br>
-        <button type="submit">Upload and Process</button>
-    </form>
+    <header class="navbar">
+        <div class="logo">
+            <img class="compact_logo" src="../static/images/cover-removebg-preview.png" alt="Compact Logo">
+        </div>
+    </header>
+    <main class="content">
+        <div class="container">
+            <h1>Upload a Text File for Processing</h1>
 
-    {% if message %}
-        <p>{{ message }}</p>
-        <p>Encryption Key: {{ key }}</p>
-        <p>New File: <a href="{{ new_file }}">{{ new_file }}</a></p>
-    {% endif %}
+            <form action="/upload_data" method="post" enctype="multipart/form-data">
+                <label for="file">Select a text file:</label>
+                <input type="file" id="file" name="file" accept=".txt" required><br><br>
+
+                <button type="submit">Upload and Process</button>
+            </form>
+
+            {% if message %}
+                <p>{{ message }}</p>
+                <p>Encryption Key: {{ key }}</p>
+                <p>New File: <a href="{{ new_file }}">{{ new_file }}</a></p>
+            {% endif %}
+        </div>
+    </main>
 </body>
 </html>
