--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
         <nav class="navbar-links">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/download1">Download</a></li>
+                <li><a href="/upload">upload</a></li>
+                <li><a href="/data_encrypt">Send file</a></li>
             </ul>
         </nav>
     </header>
